CAUSEWAY-3855: surefire configuration to allow dynamic agent loading